# PrettySimpleProgrammingLanguage

./: CMakeLists.txt  LICENSE  README.md  main.cpp  test.apl  test.pspl  test2.pspl
Source/Compiler/: ByteCode.h  Compiler.cpp  Compiler.h  OptionsContainer.h
Source/Compiler/Compiler/: ByteCode.h  Compiler.cpp  Compiler.h
Source/Compiler/Parser/: ActionTreeCreator.h  BuiltinFunctions.h  CommonFNS.h  IdRegister.h  MathExpressionParser.cpp  MathExpressionParser.h  Parser.cpp  Parser.h  Results.h  TreeCreator.h  TreeOptimizer.h  TreeValidator.h  ValidateScope.h  VariableType.h
Source/Compiler/Parser/Action/: Actions.h  BaseAction.h  OperationType.h
Source/Compiler/Parser/Implementations/: IdRegister.cpp  ParserDisplayFunc.cpp  Parser_extract_nested_functions.cpp  TreeCreator.cpp  TreeOptimizer.cpp  TreeValidator.cpp
Source/Compiler/Parser/ParserStuff/: IdRegFuncs.cpp  ParserDisplayFunc.cpp  ParserMisc.cpp  Parser_create_ast.cpp  Parser_extract_nested_functions.cpp  Parser_optimize_tree.cpp  Parser_validate_ast.cpp
Source/Compiler/Transpiler/: TokenHelperFunctions.cpp  Tokens.h  Transpiler.cpp  Transpiler.h
Source/VirtualMachine/: VirtualMachine.cpp  VirtualMachine.h
